# cop

./: CMakeLists.txt  LICENSE  README.md  cop_comp_internalstate.F90  cop_comp_nuopc.F90  cop_comp_shr.F90
.github/workflows/: test_plugins.yaml
doc/source/: conf.py
docs/source/: conf.py  index.rst
plugins/catalyst/: CMakeLists.txt  cop_phases_catalyst.F90  cop_phases_catalyst_void.F90
plugins/io/: CMakeLists.txt  cop_phases_io.F90
plugins/python/: CMakeLists.txt  cop_interface.cpp  cop_phases_python.F90
src/: CMakeLists.txt  geogate_internalstate.F90  geogate_nuopc.F90  geogate_share.F90
src/cmake/: SetupPython.cmake
src/plugins/catalyst/: CMakeLists.txt  cop_phases_catalyst.F90  geogate_phases_catalyst.F90  geogate_phases_catalyst_void.F90
src/plugins/io/: CMakeLists.txt  geogate_phases_io.F90
src/plugins/python/: CMakeLists.txt  cop_phases_python.F90  cop_phases_python_void.F90  cop_python_interface.F90  geogate_phases_python.F90  geogate_phases_python_void.F90  geogate_python_interface.F90  geogate_python_interface.cpp
